// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changing isRegistering state State changes as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            }
          }
        >
           DevHub 
        </Text>,
        <CustomTextInput
          autoCapitalize="none"
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Email"
          returnKeyType="next"
        />,
        <CustomTextInput
          autoCapitalize="none"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Password"
          returnKeyType="next"
        />,
        <CustomTextInput
          autoCapitalize="none"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Confirm Password"
          returnKeyType="next"
        />,
        <CustomButton
          color="#39A9DB"
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Register
          </Text>
        </CustomButton>,
      ],
      "style": Object {
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": " DevHub ",
          "ellipsizeMode": "tail",
          "style": Object {
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 10,
          },
        },
        "ref": null,
        "rendered": " DevHub ",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "keyboardType": "email-address",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Email",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Password",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Confirm Password",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Register
          </Text>,
          "color": "#39A9DB",
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Register",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
            },
          },
          "ref": null,
          "rendered": "Register",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 30,
                "fontWeight": "bold",
                "marginVertical": 10,
              }
            }
          >
             DevHub 
          </Text>,
          <CustomTextInput
            autoCapitalize="none"
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Email"
            returnKeyType="next"
          />,
          <CustomTextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            returnKeyType="next"
          />,
          <CustomTextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Confirm Password"
            returnKeyType="next"
          />,
          <CustomButton
            color="#39A9DB"
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Register
            </Text>
          </CustomButton>,
        ],
        "style": Object {
          "backgroundColor": "white",
          "flex": 1,
          "justifyContent": "center",
          "padding": 20,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": " DevHub ",
            "ellipsizeMode": "tail",
            "style": Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            },
          },
          "ref": null,
          "rendered": " DevHub ",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "keyboardType": "email-address",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Email",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Password",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Confirm Password",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Register
            </Text>,
            "color": "#39A9DB",
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Register",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
              },
            },
            "ref": null,
            "rendered": "Register",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Changing text input state State changes as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            }
          }
        >
           DevHub 
        </Text>,
        <CustomTextInput
          autoCapitalize="none"
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Email"
          returnKeyType="next"
        />,
        <CustomTextInput
          autoCapitalize="none"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Password"
          returnKeyType="next"
        />,
        <CustomTextInput
          autoCapitalize="none"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Confirm Password"
          returnKeyType="next"
        />,
        <CustomButton
          color="#39A9DB"
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Register
          </Text>
        </CustomButton>,
      ],
      "style": Object {
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": " DevHub ",
          "ellipsizeMode": "tail",
          "style": Object {
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 10,
          },
        },
        "ref": null,
        "rendered": " DevHub ",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "keyboardType": "email-address",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Email",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Password",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Confirm Password",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Register
          </Text>,
          "color": "#39A9DB",
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Register",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
            },
          },
          "ref": null,
          "rendered": "Register",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 30,
                "fontWeight": "bold",
                "marginVertical": 10,
              }
            }
          >
             DevHub 
          </Text>,
          <CustomTextInput
            autoCapitalize="none"
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Email"
            returnKeyType="next"
          />,
          <CustomTextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            returnKeyType="next"
          />,
          <CustomTextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Confirm Password"
            returnKeyType="next"
          />,
          <CustomButton
            color="#39A9DB"
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Register
            </Text>
          </CustomButton>,
        ],
        "style": Object {
          "backgroundColor": "white",
          "flex": 1,
          "justifyContent": "center",
          "padding": 20,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": " DevHub ",
            "ellipsizeMode": "tail",
            "style": Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            },
          },
          "ref": null,
          "rendered": " DevHub ",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "keyboardType": "email-address",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Email",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Password",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Confirm Password",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Register
            </Text>,
            "color": "#39A9DB",
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Register",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
              },
            },
            "ref": null,
            "rendered": "Register",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Renders Register Correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 30,
        "fontWeight": "bold",
        "marginVertical": 10,
      }
    }
  >
     DevHub 
  </Text>
  <CustomTextInput
    autoCapitalize="none"
    keyboardType="email-address"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Email"
    returnKeyType="next"
  />
  <CustomTextInput
    autoCapitalize="none"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Password"
    returnKeyType="next"
  />
  <CustomTextInput
    autoCapitalize="none"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Confirm Password"
    returnKeyType="next"
  />
  <CustomButton
    color="#39A9DB"
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Register
    </Text>
  </CustomButton>
</Component>
`;

exports[`Testing Register button to change state State changes as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            }
          }
        >
           DevHub 
        </Text>,
        <CustomTextInput
          autoCapitalize="none"
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Email"
          returnKeyType="next"
        />,
        <CustomTextInput
          autoCapitalize="none"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Password"
          returnKeyType="next"
        />,
        <CustomTextInput
          autoCapitalize="none"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Confirm Password"
          returnKeyType="next"
        />,
        <CustomButton
          color="#39A9DB"
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Register
          </Text>
        </CustomButton>,
      ],
      "style": Object {
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": " DevHub ",
          "ellipsizeMode": "tail",
          "style": Object {
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 10,
          },
        },
        "ref": null,
        "rendered": " DevHub ",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "keyboardType": "email-address",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Email",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Password",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Confirm Password",
          "returnKeyType": "next",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Register
          </Text>,
          "color": "#39A9DB",
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Register",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
            },
          },
          "ref": null,
          "rendered": "Register",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 30,
                "fontWeight": "bold",
                "marginVertical": 10,
              }
            }
          >
             DevHub 
          </Text>,
          <CustomTextInput
            autoCapitalize="none"
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Email"
            returnKeyType="next"
          />,
          <CustomTextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            returnKeyType="next"
          />,
          <CustomTextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Confirm Password"
            returnKeyType="next"
          />,
          <CustomButton
            color="#39A9DB"
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Register
            </Text>
          </CustomButton>,
        ],
        "style": Object {
          "backgroundColor": "white",
          "flex": 1,
          "justifyContent": "center",
          "padding": 20,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": " DevHub ",
            "ellipsizeMode": "tail",
            "style": Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            },
          },
          "ref": null,
          "rendered": " DevHub ",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "keyboardType": "email-address",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Email",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Password",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Confirm Password",
            "returnKeyType": "next",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Register
            </Text>,
            "color": "#39A9DB",
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Register",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
              },
            },
            "ref": null,
            "rendered": "Register",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
